se implementa swagger para admin/store
